syntax = "proto3";
package kava.hard.v1beta1;

import "kava/hard/v1beta1/hard.proto";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/kava-labs/kava/x/hard/types";

// GenesisState defines the pricefeed module's genesis state.
message GenesisState {
  Params                   params                      = 1 [(gogoproto.nullable) = false];
  GenesisAccumulationTimes previous_accumulation_times = 2 [(gogoproto.nullable) = false];
  Deposits                 deposits                    = 3 [(gogoproto.nullable) = false];
  Borrows                  borrows                     = 4 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin total_supplied              = 5
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin", (gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin total_borrowed = 6
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin", (gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin total_reserves = 7
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin", (gogoproto.nullable) = false];
}

// GenesisAccumulationTime stores the previous distribution time and its corresponding denom
message GenesisAccumulationTime {
  string                    collateral_type            = 1;
  google.protobuf.Timestamp previous_accumulation_time = 1 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];

  string supply_interest_factor = 1 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  string borrow_interest_factor = 1 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}